# app/Http/Requests/Api/V1/Wallet/WalletTransferRequest.php
@@ -3,6 +3,7 @@
 namespace App\Http\Requests\Api\V1\Wallet;
 
 use Illuminate\Foundation\Http\FormRequest;
+use Illuminate\Validation\Rule;
 
 class WalletTransferRequest extends FormRequest
 {
@@ -14,10 +15,14 @@ class WalletTransferRequest extends FormRequest
     /** @return array<string, array<int, string>> */
     public function rules(): array
     {
-        return [
-            'phone_number' => ['required', 'numeric', 'exists:users,phone_number'],
-            'amount' => ['required', 'numeric', 'min:1'],
-            'notes' => ['nullable', 'string', 'max:255'],
-        ];
+       return [
+        'phone_number' => [
+            'required',
+            'exists:users,phone_number',
+            Rule::notIn([$this->user()->phone_number]),
+        ],
+        'amount' => ['required', 'numeric', 'min:1'],
+        'notes' => ['nullable', 'string', 'max:255'],
+    ];
     }
 }
